--- a/project.yml
+++ b/project.yml
@@ -1,51 +1,51 @@
-name: bitchat
+name: MeshTalk
 options:
-  bundleIdPrefix: chat.bitchat
+  bundleIdPrefix: chat.meshtalk
   deploymentTarget:
     iOS: 16.0
     macOS: 13.0
   createIntermediateGroups: true
-  
+
 settings:
   MARKETING_VERSION: 1.0.0
   CURRENT_PROJECT_VERSION: 1
-  
+
 targets:
-  bitchat_iOS:
+  MeshTalk_iOS:
     type: application
     platform: iOS
-    sources: 
-      - bitchat
+    sources:
+    - MeshTalk
     resources:
-      - bitchat/Assets.xcassets
-      - bitchat/LaunchScreen.storyboard
+    - MeshTalk/Assets.xcassets
+    - MeshTalk/LaunchScreen.storyboard
     info:
-      path: bitchat/Info.plist
+      path: MeshTalk/Info.plist
       properties:
-        CFBundleDisplayName: bitchat
+        CFBundleDisplayName: MeshTalk
         CFBundleShortVersionString: $(MARKETING_VERSION)
         CFBundleVersion: $(CURRENT_PROJECT_VERSION)
-        NSBluetoothAlwaysUsageDescription: bitchat uses Bluetooth to create a secure mesh network for chatting with nearby users.
-        NSBluetoothPeripheralUsageDescription: bitchat uses Bluetooth to discover and connect with other bitchat users nearby.
+        NSBluetoothAlwaysUsageDescription: MeshTalk uses Bluetooth to create a secure mesh network for chatting with nearby users.
+        NSBluetoothPeripheralUsageDescription: MeshTalk uses Bluetooth to discover and connect with other MeshTalk users nearby.
         UIBackgroundModes:
-          - bluetooth-central
-          - bluetooth-peripheral
+        - bluetooth-central
+        - bluetooth-peripheral
         UILaunchStoryboardName: LaunchScreen
         UISupportedInterfaceOrientations:
-          - UIInterfaceOrientationPortrait
+        - UIInterfaceOrientationPortrait
         UISupportedInterfaceOrientations~ipad:
-          - UIInterfaceOrientationPortrait
-          - UIInterfaceOrientationPortraitUpsideDown
-          - UIInterfaceOrientationLandscapeLeft
-          - UIInterfaceOrientationLandscapeRight
+        - UIInterfaceOrientationPortrait
+        - UIInterfaceOrientationPortraitUpsideDown
+        - UIInterfaceOrientationLandscapeLeft
+        - UIInterfaceOrientationLandscapeRight
         UIRequiresFullScreen: false
         CFBundleURLTypes:
-          - CFBundleURLSchemes:
-              - bitchat
+        - CFBundleURLSchemes:
+          - meshtalk
     settings:
-      PRODUCT_BUNDLE_IDENTIFIER: chat.bitchat
-      PRODUCT_NAME: bitchat
-      INFOPLIST_FILE: bitchat/Info.plist
+      PRODUCT_BUNDLE_IDENTIFIER: chat.meshtalk
+      PRODUCT_NAME: MeshTalk
+      INFOPLIST_FILE: MeshTalk/Info.plist
       ENABLE_PREVIEWS: YES
       SWIFT_VERSION: 5.0
       IPHONEOS_DEPLOYMENT_TARGET: 16.0
@@ -56,34 +56,34 @@ targets:
       DEVELOPMENT_TEAM: L3N5LHJD5Y
       ASSETCATALOG_COMPILER_APPICON_NAME: AppIcon
       ASSETCATALOG_COMPILER_INCLUDE_ALL_APPICON_ASSETS: YES
-      CODE_SIGN_ENTITLEMENTS: bitchat/bitchat.entitlements
+      CODE_SIGN_ENTITLEMENTS: MeshTalk/MeshTalk.entitlements
     dependencies:
-      - target: bitchatShareExtension
-        embed: true
-        
-  bitchat_macOS:
+    - target: MeshTalkShareExtension
+      embed: true
+
+  MeshTalk_macOS:
     type: application
     platform: macOS
-    sources: 
-      - bitchat
+    sources:
+    - MeshTalk
     resources:
-      - bitchat/Assets.xcassets
+    - MeshTalk/Assets.xcassets
     info:
-      path: bitchat/Info.plist
+      path: MeshTalk/Info.plist
       properties:
-        CFBundleDisplayName: bitchat
+        CFBundleDisplayName: MeshTalk
         CFBundleShortVersionString: $(MARKETING_VERSION)
         CFBundleVersion: $(CURRENT_PROJECT_VERSION)
         LSMinimumSystemVersion: $(MACOSX_DEPLOYMENT_TARGET)
-        NSBluetoothAlwaysUsageDescription: bitchat uses Bluetooth to create a secure mesh network for chatting with nearby users.
-        NSBluetoothPeripheralUsageDescription: bitchat uses Bluetooth to discover and connect with other bitchat users nearby.
+        NSBluetoothAlwaysUsageDescription: MeshTalk uses Bluetooth to create a secure mesh network for chatting with nearby users.
+        NSBluetoothPeripheralUsageDescription: MeshTalk uses Bluetooth to discover and connect with other MeshTalk users nearby.
         CFBundleURLTypes:
-          - CFBundleURLSchemes:
-              - bitchat
+        - CFBundleURLSchemes:
+          - meshtalk
     settings:
-      PRODUCT_BUNDLE_IDENTIFIER: chat.bitchat
-      PRODUCT_NAME: bitchat
-      INFOPLIST_FILE: bitchat/Info.plist
+      PRODUCT_BUNDLE_IDENTIFIER: chat.meshtalk
+      PRODUCT_NAME: MeshTalk
+      INFOPLIST_FILE: MeshTalk/Info.plist
       ENABLE_PREVIEWS: YES
       SWIFT_VERSION: 5.0
       MACOSX_DEPLOYMENT_TARGET: 13.0
@@ -93,17 +93,17 @@ targets:
       DEVELOPMENT_TEAM: L3N5LHJD5Y
       ASSETCATALOG_COMPILER_APPICON_NAME: AppIcon
       ASSETCATALOG_COMPILER_INCLUDE_ALL_APPICON_ASSETS: YES
-      CODE_SIGN_ENTITLEMENTS: bitchat/bitchat-macOS.entitlements
-        
-  bitchatShareExtension:
+      CODE_SIGN_ENTITLEMENTS: MeshTalk/MeshTalk-macOS.entitlements
+
+  MeshTalkShareExtension:
     type: app-extension
     platform: iOS
     sources:
-      - bitchatShareExtension
+    - MeshTalkShareExtension
     info:
-      path: bitchatShareExtension/Info.plist
+      path: MeshTalkShareExtension/Info.plist
       properties:
-        CFBundleDisplayName: bitchat
+        CFBundleDisplayName: MeshTalk
         CFBundleShortVersionString: $(MARKETING_VERSION)
         CFBundleVersion: $(CURRENT_PROJECT_VERSION)
         NSExtension:
@@ -115,49 +115,49 @@ targets:
               NSExtensionActivationSupportsWebURLWithMaxCount: 1
               NSExtensionActivationSupportsImageWithMaxCount: 1
     settings:
-      PRODUCT_BUNDLE_IDENTIFIER: chat.bitchat.ShareExtension
-      INFOPLIST_FILE: bitchatShareExtension/Info.plist
+      PRODUCT_BUNDLE_IDENTIFIER: chat.meshtalk.ShareExtension
+      INFOPLIST_FILE: MeshTalkShareExtension/Info.plist
       SWIFT_VERSION: 5.0
       IPHONEOS_DEPLOYMENT_TARGET: 16.0
       CODE_SIGN_STYLE: Automatic
       CODE_SIGNING_REQUIRED: YES
       CODE_SIGNING_ALLOWED: YES
       DEVELOPMENT_TEAM: L3N5LHJD5Y
-      CODE_SIGN_ENTITLEMENTS: bitchatShareExtension/bitchatShareExtension.entitlements
+      CODE_SIGN_ENTITLEMENTS: MeshTalkShareExtension/MeshTalkShareExtension.entitlements
       CODE_SIGN_ALLOW_ENTITLEMENTS_MODIFICATION: YES
 
-  bitchatTests_iOS:
+  MeshTalkTests_iOS:
     type: bundle.unit-test
     platform: iOS
-    sources: 
-      - bitchatTests
+    sources:
+    - MeshTalkTests
     dependencies:
-      - target: bitchat_iOS
+    - target: MeshTalk_iOS
     settings:
-      PRODUCT_BUNDLE_IDENTIFIER: chat.bitchat.tests
-      INFOPLIST_FILE: bitchatTests/Info.plist
+      PRODUCT_BUNDLE_IDENTIFIER: chat.meshtalk.tests
+      INFOPLIST_FILE: MeshTalkTests/Info.plist
       SWIFT_VERSION: 5.0
       IPHONEOS_DEPLOYMENT_TARGET: 16.0
-      TEST_HOST: $(BUILT_PRODUCTS_DIR)/bitchat.app/$(BUNDLE_EXECUTABLE_FOLDER_PATH)/bitchat
+      TEST_HOST: $(BUILT_PRODUCTS_DIR)/MeshTalk.app/$(BUNDLE_EXECUTABLE_FOLDER_PATH)/MeshTalk
       BUNDLE_LOADER: $(TEST_HOST)
       CODE_SIGN_STYLE: Automatic
       CODE_SIGNING_REQUIRED: YES
       CODE_SIGNING_ALLOWED: YES
       DEVELOPMENT_TEAM: L3N5LHJD5Y
-      
-  bitchatTests_macOS:
+
+  MeshTalkTests_macOS:
     type: bundle.unit-test
     platform: macOS
-    sources: 
-      - bitchatTests
+    sources:
+    - MeshTalkTests
     dependencies:
-      - target: bitchat_macOS
+    - target: MeshTalk_macOS
     settings:
-      PRODUCT_BUNDLE_IDENTIFIER: chat.bitchat.tests
-      INFOPLIST_FILE: bitchatTests/Info.plist
+      PRODUCT_BUNDLE_IDENTIFIER: chat.meshtalk.tests
+      INFOPLIST_FILE: MeshTalkTests/Info.plist
       SWIFT_VERSION: 5.0
       MACOSX_DEPLOYMENT_TARGET: 13.0
-      TEST_HOST: $(BUILT_PRODUCTS_DIR)/bitchat.app/Contents/MacOS/bitchat
+      TEST_HOST: $(BUILT_PRODUCTS_DIR)/MeshTalk.app/Contents/MacOS/MeshTalk
       BUNDLE_LOADER: $(TEST_HOST)
       CODE_SIGN_STYLE: Automatic
       CODE_SIGNING_REQUIRED: YES
@@ -165,40 +165,40 @@ targets:
       DEVELOPMENT_TEAM: L3N5LHJD5Y
 
 schemes:
-  bitchat (iOS):
+  MeshTalk (iOS):
     build:
       targets:
-        bitchat_iOS: all
-        bitchatShareExtension: all
+        MeshTalk_iOS: all
+        MeshTalkShareExtension: all
     run:
       config: Debug
-      executable: bitchat_iOS
+      executable: MeshTalk_iOS
     test:
       config: Debug
       targets:
-        - bitchatTests_iOS
+      - MeshTalkTests_iOS
     profile:
       config: Release
-      executable: bitchat_iOS
+      executable: MeshTalk_iOS
     analyze:
       config: Debug
     archive:
       config: Release
-      
-  bitchat (macOS):
+
+  MeshTalk (macOS):
     build:
       targets:
-        bitchat_macOS: all
+        MeshTalk_macOS: all
     run:
       config: Debug
-      executable: bitchat_macOS
+      executable: MeshTalk_macOS
     test:
       config: Debug
       targets:
-        - bitchatTests_macOS
+      - MeshTalkTests_macOS
     profile:
       config: Release
-      executable: bitchat_macOS
+      executable: MeshTalk_macOS
     analyze:
       config: Debug
     archive:
